--- a/src/components/output/output.css
+++ b/src/components/output/output.css
@@ -1,5 +1,31 @@
-.output {
+#output {
     margin: 0.6em;
-    padding: 0.4em;
-    background-color: #f5f5f5;
+    text-align: left;
+    font-size: 1em;
+}
+
+.outputScreen {
+    height: 3em;
+    padding: 0.4em 0.8em;
+    width: 100%;
+    border-radius: 0.3em;
+    box-sizing: border-box;
+    cursor: text;
+    border: 1px solid #ddd;
+    background: #eee;
+}
+
+.outputTyping {
+    color: #111;
+    line-height: 2.2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+#cursor {
+    height: 100%;
+    margin-left: 0.2em;
+    width: 0.15em;
+    background: #16c0df;
 }
