Worked through translations

--- a/src/components/translations/translations.css
+++ b/src/components/translations/translations.css
@@ -1,5 +1,20 @@
-.translation {
-    margin: 0.6em;
-    padding: 0.4em;
-    background-color: #f5f5f5;
+#translationsWrapper {
+    margin: 0 0.6em;
+    padding: 0 0.4em 0.4em 0.4em;
+    color: #111;
+}
+
+.translationsText {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.translations {
+    font-size: 0.7em;
+}
+
+.translationsIcon {
+    font-size: 1em;
+    margin-right: 0.5em;
 }
