--- a/src/components/translations/translations.css
+++ b/src/components/translations/translations.css
@@ -15,6 +15,10 @@
 }
 
 .translationsIcon {
-    font-size: 1em;
+    font-size: 1.2em;
     margin-right: 0.5em;
+}
+
+.spacer {
+    color: #16c0df;
 }
