--- a/src/components/languages/languages.css
+++ b/src/components/languages/languages.css
@@ -1,6 +1,26 @@
-.languages {
-    margin: 0 0.6em 0.6em 0.6em;
-    padding: 0.4em;
-    background-color: #f5f5f5;
-    flex-grow: 1;
+.languagesWrapper {
+    margin: 0 0.6em;
+    padding: 0.2em;
+    display: flex;
+    flex-direction: row;
+    gap: 0.6em;
+}
+
+.flags {
+    height: 1.4em;
+    padding-bottom: 0.4em
+}
+
+.flags.active {
+    border-bottom: 0.2em solid #16c0df;
+}
+
+@keyframes click {
+    0% { transform: scale(1, 1); }
+    50% { transform: scale(0.8, 0.8); }
+    100% { transform: scale(1, 1); }
+}
+
+a:focus {
+    animation: click 0.2s ease-out;
 }
