--- a/src/components/translations/translations.css
+++ b/src/components/translations/translations.css
@@ -19,6 +19,10 @@
     margin-right: 0.5em;
 }
 
-.spacer {
+.translationsSpacer {
     color: #16c0df;
+}
+
+.definitionsSpacer {
+    color: #FC440F;
 }
