--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -68,7 +68,7 @@ form.searchInput::after {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 1em;
-    min-height: 3em;
+    min-height: 4em;
     cursor: pointer;
 }
 
@@ -92,4 +92,14 @@ form.searchInput::after {
     left: 0;
     width: 100%;
     height: 100%;
+    fill: #111;
 }
+
+.searchSvgCharacter:hover {
+    fill: #16c0df;
+}
+
+.searchSvgWord:hover {
+    fill: #f7567c;
+}
+
