--- a/src/components/definitions/definitions.css
+++ b/src/components/definitions/definitions.css
@@ -1,25 +1,25 @@
 #definitionsWrapper {
-    margin: 0 0.6em 0.6em 0.6em;
-    padding: 0.4em;
-    color: #111;
-    flex-grow: 1;
+  margin: 0 0.6em 0.6em 0.6em;
+  padding: 0.4em;
+  color: #111;
+  flex-grow: 1;
 }
 
 .definitionsText {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 .definitions {
-    font-size: 1em;
+  font-size: 1em;
 }
 
 .definitionsIcon {
-    font-size: 1.2em;
-    margin-right: 0.5em;
+  font-size: 1.2em;
+  margin-right: 0.5em;
 }
 
 .definitionsSpacer {
-    color: #FC440F;
+  color: #fc440f;
 }
